# SecretNetwork-Randomness-Tutorial

./: .gitignore  CLI.md  Cargo.toml  README.md
examples/: schema.rs
node/: .env  index.js  package-lock.json  package.json
src/: contract.rs  msg.rs  state.rs
